16. Day 4 - Comparing AI Agent Frameworks: Simplicity vs Power in LLM Orchestration

--- a/Section 1 Week 1/3_day.ipynb
+++ b/Section 1 Week 1/3_day.ipynb
@@ -1652,6 +1652,31 @@
     }
    ],
    "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-09T19:36:22.087867Z",
+     "start_time": "2025-07-09T19:36:22.072650Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open('agentic_ai_exercise_results.txt', 'w') as f:\n",
+    "    for competitor, answer in zip(competitors, answers):\n",
+    "        f.write(f\"{competitor}: {answer}\\n\")"
+   ],
+   "id": "97e72d8b194fb9a0",
+   "outputs": [],
+   "execution_count": 46
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "535f13bda83512d4"
   }
  ],
  "metadata": {
