--- a/Section 1 Week 1/5_day.ipynb
+++ b/Section 1 Week 1/5_day.ipynb
@@ -332,12 +332,36 @@
    "execution_count": 15
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T18:39:47.970881Z",
+     "start_time": "2025-07-10T18:39:47.966998Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def handle_tool_calls(tool_calls):\n",
+    "    results = []\n",
+    "    for tool_call in tool_calls:\n",
+    "        tool_name = tool_call.function.name\n",
+    "        arguments = json.loads(tool_call.function.arguments)\n",
+    "        print(f\"Tool called: {tool_name}\", flush=True)\n",
+    "        tool = globals().get(tool_name)\n",
+    "        result = tool(**arguments) if tool else {}\n",
+    "        results.append({\"role\": \"tool\",\"content\": json.dumps(result),\"tool_call_id\": tool_call.id})\n",
+    "    return results"
+   ],
+   "id": "35cbaf5779d84cfb",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "35cbaf5779d84cfb"
+   "id": "8ee53a77cbb54976"
   }
  ],
  "metadata": {
