Refactor `5_day.ipynb`: replace raw JSON cells with `#%%` markers to improve modularity, readability, and maintainability. Add detailed prompts, LinkedIn data extraction, enhanced tool handling logic, and integrate Gradio chat interface for seamless chatbot interaction.

--- a/Section 1 Week 1/5_day.ipynb
+++ b/Section 1 Week 1/5_day.ipynb
@@ -356,12 +356,139 @@
    "execution_count": 16
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T18:44:33.706423Z",
+     "start_time": "2025-07-10T18:44:33.613220Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "reader = PdfReader(os.getenv('CV_PATH'))\n",
+    "linkedin = \"\"\n",
+    "for page in reader.pages:\n",
+    "    text = page.extract_text()\n",
+    "    if text:\n",
+    "        linkedin += text\n",
+    "\n",
+    "with open(os.getenv(\"SUMMARY_PATH\"), \"r\", encoding=\"utf-8\") as f:\n",
+    "    summary = f.read()\n",
+    "\n",
+    "name = os.getenv(\"NAME_SURNAME\")"
+   ],
+   "id": "8ee53a77cbb54976",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T18:44:50.722184Z",
+     "start_time": "2025-07-10T18:44:50.718192Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "system_prompt = f\"You are acting as {name}. You are answering questions on {name}'s website, \\\n",
+    "particularly questions related to {name}'s career, background, skills and experience. \\\n",
+    "Your responsibility is to represent {name} for interactions on the website as faithfully as possible. \\\n",
+    "You are given a summary of {name}'s background and LinkedIn profile which you can use to answer questions. \\\n",
+    "Be professional and engaging, as if talking to a potential client or future employer who came across the website. \\\n",
+    "If you don't know the answer to any question, use your record_unknown_question tool to record the question that you couldn't answer, even if it's about something trivial or unrelated to career. \\\n",
+    "If the user is engaging in discussion, try to steer them towards getting in touch via email; ask for their email and record it using your record_user_details tool. \"\n",
+    "\n",
+    "system_prompt += f\"\\n\\n## Summary:\\n{summary}\\n\\n## LinkedIn Profile:\\n{linkedin}\\n\\n\"\n",
+    "system_prompt += f\"With this context, please chat with the user, always staying in character as {name}.\"\n"
+   ],
+   "id": "9a1ad9351b979bdf",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T18:45:03.472795Z",
+     "start_time": "2025-07-10T18:45:03.468103Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def chat(message, history):\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_prompt}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    done = False\n",
+    "    while not done:\n",
+    "\n",
+    "        # This is the call to the LLM - see that we pass in the tools json\n",
+    "\n",
+    "        response = gemini.chat.completions.create(model=\"gemini-2.5-flash\", messages=messages, tools=tools)\n",
+    "\n",
+    "        finish_reason = response.choices[0].finish_reason\n",
+    "\n",
+    "        # If the LLM wants to call a tool, we do that!\n",
+    "\n",
+    "        if finish_reason==\"tool_calls\":\n",
+    "            message = response.choices[0].message\n",
+    "            tool_calls = message.tool_calls\n",
+    "            results = handle_tool_calls(tool_calls)\n",
+    "            messages.append(message)\n",
+    "            messages.extend(results)\n",
+    "        else:\n",
+    "            done = True\n",
+    "    return response.choices[0].message.content"
+   ],
+   "id": "215ad5eb93db2a46",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T18:45:11.634776Z",
+     "start_time": "2025-07-10T18:45:10.129842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "gr.ChatInterface(chat, type=\"messages\").launch()",
+   "id": "d4af906c96c15ec3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8ee53a77cbb54976"
+   "id": "8163a7668ec6d734"
   }
  ],
  "metadata": {
