Refactor `5_day.ipynb`: improve readability and maintainability by converting raw JSON cells to `#%%` markers. Maintain existing functionality while enhancing modularity and incorporating detailed prompts, tool handling, LinkedIn data extraction, and Gradio chat interface setup.

--- a/Section 1 Week 1/5_day.ipynb
+++ b/Section 1 Week 1/5_day.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:24.790322Z",
-     "start_time": "2025-07-10T18:25:19.533565Z"
+     "end_time": "2025-07-10T19:09:23.204074Z",
+     "start_time": "2025-07-10T19:09:23.200335Z"
     }
    },
    "source": [
@@ -20,31 +20,33 @@
     "import gradio as gr"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:25.259026Z",
-     "start_time": "2025-07-10T18:25:25.255915Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "google_api_key = os.getenv(\"GEMINI_API_KEY\")",
-   "id": "de14d5d72231be6c",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:26.104932Z",
-     "start_time": "2025-07-10T18:25:25.274136Z"
+     "end_time": "2025-07-10T19:09:23.228599Z",
+     "start_time": "2025-07-10T19:09:23.224417Z"
     }
    },
    "cell_type": "code",
    "source": [
     "load_dotenv(override=True)\n",
+    "google_api_key = os.getenv(\"GEMINI_API_KEY\")"
+   ],
+   "id": "de14d5d72231be6c",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T19:09:24.041924Z",
+     "start_time": "2025-07-10T19:09:23.241034Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "gemini = OpenAI(\n",
     "    api_key=google_api_key,\n",
     "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
@@ -52,13 +54,13 @@
    ],
    "id": "b577542af38154ef",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:26.118236Z",
-     "start_time": "2025-07-10T18:25:26.114955Z"
+     "end_time": "2025-07-10T19:09:24.055226Z",
+     "start_time": "2025-07-10T19:09:24.052347Z"
     }
    },
    "cell_type": "code",
@@ -69,13 +71,13 @@
    ],
    "id": "1f276ed420e1a3f5",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:26.132472Z",
-     "start_time": "2025-07-10T18:25:26.128767Z"
+     "end_time": "2025-07-10T19:09:24.071977Z",
+     "start_time": "2025-07-10T19:09:24.068979Z"
     }
    },
    "cell_type": "code",
@@ -87,13 +89,13 @@
    ],
    "id": "4fcbd14ccae5d072",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:25:40.090196Z",
-     "start_time": "2025-07-10T18:25:38.891403Z"
+     "end_time": "2025-07-10T19:09:25.274476Z",
+     "start_time": "2025-07-10T19:09:24.085794Z"
     }
    },
    "cell_type": "code",
@@ -108,13 +110,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:16.121370Z",
-     "start_time": "2025-07-10T18:26:16.118097Z"
+     "end_time": "2025-07-10T19:09:25.288080Z",
+     "start_time": "2025-07-10T19:09:25.284386Z"
     }
    },
    "cell_type": "code",
@@ -125,13 +127,13 @@
    ],
    "id": "96f04f274937c7e1",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:23.291468Z",
-     "start_time": "2025-07-10T18:26:23.288110Z"
+     "end_time": "2025-07-10T19:09:25.305625Z",
+     "start_time": "2025-07-10T19:09:25.302370Z"
     }
    },
    "cell_type": "code",
@@ -142,13 +144,13 @@
    ],
    "id": "d6e7be8040c25719",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:33.129358Z",
-     "start_time": "2025-07-10T18:26:33.125299Z"
+     "end_time": "2025-07-10T19:09:25.324625Z",
+     "start_time": "2025-07-10T19:09:25.320626Z"
     }
    },
    "cell_type": "code",
@@ -180,13 +182,13 @@
    ],
    "id": "d331670e7300bd9e",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:37.595179Z",
-     "start_time": "2025-07-10T18:26:37.591069Z"
+     "end_time": "2025-07-10T19:09:25.341544Z",
+     "start_time": "2025-07-10T19:09:25.338547Z"
     }
    },
    "cell_type": "code",
@@ -209,13 +211,13 @@
    ],
    "id": "523e384cbd075151",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:47.734075Z",
-     "start_time": "2025-07-10T18:26:47.731038Z"
+     "end_time": "2025-07-10T19:09:25.358656Z",
+     "start_time": "2025-07-10T19:09:25.354651Z"
     }
    },
    "cell_type": "code",
@@ -225,13 +227,13 @@
    ],
    "id": "a45fdc0f9ed43672",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:26:51.825483Z",
-     "start_time": "2025-07-10T18:26:51.819966Z"
+     "end_time": "2025-07-10T19:09:25.390987Z",
+     "start_time": "2025-07-10T19:09:25.371674Z"
     }
    },
    "cell_type": "code",
@@ -263,18 +265,18 @@
        "    'additionalProperties': False}}}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:27:02.442667Z",
-     "start_time": "2025-07-10T18:27:02.439159Z"
+     "end_time": "2025-07-10T19:09:25.410963Z",
+     "start_time": "2025-07-10T19:09:25.406964Z"
     }
    },
    "cell_type": "code",
@@ -298,13 +300,13 @@
    ],
    "id": "8f96499563afd9db",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:27:08.937629Z",
-     "start_time": "2025-07-10T18:27:07.737151Z"
+     "end_time": "2025-07-10T19:09:26.442569Z",
+     "start_time": "2025-07-10T19:09:25.423925Z"
     }
    },
    "cell_type": "code",
@@ -324,18 +326,18 @@
        "{'recorded': 'ok'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:39:47.970881Z",
-     "start_time": "2025-07-10T18:39:47.966998Z"
+     "end_time": "2025-07-10T19:09:26.461433Z",
+     "start_time": "2025-07-10T19:09:26.458109Z"
     }
    },
    "cell_type": "code",
@@ -353,13 +355,13 @@
    ],
    "id": "35cbaf5779d84cfb",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:44:33.706423Z",
-     "start_time": "2025-07-10T18:44:33.613220Z"
+     "end_time": "2025-07-10T19:09:26.557844Z",
+     "start_time": "2025-07-10T19:09:26.475803Z"
     }
    },
    "cell_type": "code",
@@ -378,13 +380,13 @@
    ],
    "id": "8ee53a77cbb54976",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:44:50.722184Z",
-     "start_time": "2025-07-10T18:44:50.718192Z"
+     "end_time": "2025-07-10T19:09:26.570370Z",
+     "start_time": "2025-07-10T19:09:26.567422Z"
     }
    },
    "cell_type": "code",
@@ -402,13 +404,13 @@
    ],
    "id": "9a1ad9351b979bdf",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-10T18:45:03.472795Z",
-     "start_time": "2025-07-10T18:45:03.468103Z"
+     "end_time": "2025-07-10T19:09:26.599793Z",
+     "start_time": "2025-07-10T19:09:26.595918Z"
     }
    },
    "cell_type": "code",
@@ -438,57 +440,28 @@
    ],
    "id": "215ad5eb93db2a46",
    "outputs": [],
-   "execution_count": 19
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-10T18:45:11.634776Z",
-     "start_time": "2025-07-10T18:45:10.129842Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "gr.ChatInterface(chat, type=\"messages\").launch()",
-   "id": "d4af906c96c15ec3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7862\n",
-      "* To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 20
+   "execution_count": 38
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "gr.ChatInterface(chat, type=\"messages\").launch()",
+   "id": "d4af906c96c15ec3",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T19:09:27.901258Z",
+     "start_time": "2025-07-10T19:09:27.898753Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "8163a7668ec6d734"
+   "id": "8163a7668ec6d734",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
