Reduced cell count in `1_day.ipynb` by removing excessive cells and optimizing notebook structure for simplicity.

--- a/Section 1 Week 1/1_day.ipynb
+++ b/Section 1 Week 1/1_day.ipynb
@@ -10,7 +10,12 @@
      "start_time": "2025-07-07T18:04:31.093688Z"
     }
    },
-   "source": "from dotenv import load_dotenv",
+   "source": [
+    "from gzip import write32u\n",
+    "from select import KQ_FILTER_WRITE\n",
+    "\n",
+    "from dotenv import load_dotenv"
+   ],
    "outputs": [],
    "execution_count": 1
   },
@@ -1067,14 +1072,6 @@
    "execution_count": null,
    "source": "",
    "id": "d3db7702255c5fb2"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "3629f21095d008a8"
   }
  ],
  "metadata": {
